--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "git-commit-msg-linter": "^5.0.8",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
+    "openai": "^4.71.1",
     "prisma": "^5.21.1",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
+    "react-markdown": "^9.0.1",
     "react-number-format": "^5.4.2",
     "recharts": "^2.13.3",
     "shadcn": "^2.1.3",
@@ -44,13 +46,16 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
     "husky": "^9.1.6",
+    "install": "^0.13.0",
     "lint-staged": "^12.3.2",
+    "npm": "^10.9.0",
     "postcss": "^8",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
